[package]
name = "pallet-room-treasury"
version = "1.0.0"
authors = ["LISTEN TEAM"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/listenofficial/"
repository = "https://github.com/listenofficial/listen-parachain.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-runtime = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-support = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-system = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-balances = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
impl-trait-for-tuples = "0.2.1"

frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', optional = true }

# local
pallet-listen = { path = '../listen', default-features = false, version = '1.0.0' }
listen-traits = { path = '../../traits', default-features = false, version = '1.0.0' }

[dev-dependencies]
sp-io ={  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-core = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-storage = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-listen/std",
	"listen-traits/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
