[package]
name = "orml-tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/rococo-v1/tokens"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "3.0.0", default-features = false, branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", version = "3.0.0", default-features = false, branch = "rococo-v1" }
frame-support = { git = "https://github.com/paritytech/substrate", version = "3.0.0", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", version = "3.0.0", default-features = false, branch = "rococo-v1" }

# orml
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, version = '0.4.1-dev' }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

[dev-dependencies]
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-treasury = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-elections-phragmen = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
]
